# aerichTest

./: main.py  models.py  pyproject.toml  settings.py
aerich/: cli.py
migrations/models/: 0_20200924220306_init.json  1_20200924221025_update.json  2_20200924223357_update.json  old_models.py
