[tool.poetry]
name = "aerichtest"
version = "0.1.0"
description = ""
authors = ["ShirleyChau <2254751892@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = "^0.16.15"
typer = "^0.3.2"
aiomysql = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
